# django-login-history

./: .gitignore  README.md  db.sqlite3  manage.py
django-login-history-project/: settings.py  urls.py  wsgi.py
django_login_history/: admin.py  models.py  setup.cfg
django_login_history/migrations/: 0001_initial.py  0002_auto_20200607_0950.py
django_login_history_package_containter/django_login_history/: setup.cfg
django_login_history_package_containter/django_login_history.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_login_history_project/: settings.py  wsgi.py
